Melhorando experiencia do usuario

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -8,71 +8,68 @@
     android:gravity="center_horizontal"
     tools:context=".ResultActivity">
 
+
     <LinearLayout
         android:id="@+id/vg_header"
         android:layout_width="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:background="@drawable/gradient_bg"
-        android:layout_height="wrap_content"/>
-
+        android:orientation="vertical">
 
         <ImageView
-            android:src="@drawable/ic_weight"
-            android:layout_marginStart="24dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            app:tint="@color/white"/>
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/ic_weight"
+            app:tint="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:textStyle="bold"
+            android:text="Calculadora IMC"
             android:textColor="@color/white"
             android:textSize="24sp"
-            android:text="Calculadora IMC"/>
+            android:textStyle="bold" />
 
         <TextView
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
+            android:text="Confirme abaixo o seu resultado e classificação"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/tv_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="48dp"
+            android:gravity="center"
+            android:maxLength="5"
             android:textColor="@color/white"
-            android:text="Confirme abaixo o seu resultado e classificação"/>
-
-    <TextView
-        android:id="@+id/tv_result"
-        android:gravity="center"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="48dp"
-        android:textSize="52sp"
-        android:textStyle="bold"
-        android:maxLength="5"
-        android:textColor="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="23.66" />
-
-
+            android:textSize="64sp"
+            android:textStyle="bold"
+            tools:text="23.66" />
     </LinearLayout>
-
-
 
     <TextView
         android:id="@+id/tv_classificacao_label"
         android:layout_width="wrap_content"
-        android:layout_marginTop="48dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="A classificação do seu imc é:" />
 
     <TextView
         android:id="@+id/tv_classificacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="24sp"
         android:textStyle="bold"
         tools:text="NORMAL" />
 
